--- a/itcase_sphinx_theme/itcase/static/css/rst-content.css
+++ b/itcase_sphinx_theme/itcase/static/css/rst-content.css
@@ -131,10 +131,27 @@
   float: right;
   margin: 0px 0px 24px 24px;
 }
+
+.rst-content .align-right:before,
+.rst-content .align-right:after {
+    content: " ";
+    display: table;
+}
+.rst-content .align-right:after {
+    clear: both;
+}
 .rst-content .align-left
 {
   float: left;
   margin: 0px 24px 24px 0px;
+}
+.rst-content .align-left:before,
+.rst-content .align-left:after {
+    content: " ";
+    display: table;
+}
+.rst-content .align-left:after {
+    clear: both;
 }
 .rst-content .align-center
 {
@@ -334,3 +351,8 @@
     display: inline-block;
     margin: 0.3em 0;
   }
+
+.rst-content  a.image-reference
+{
+  display: inline-block;
+}
